chore(build): update scripts to build .js files
refactor to remove assets folder and move assets under `src/`;

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -22,6 +22,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    outline: 6px solid transparent;
   }
   
   .fa-moon {color: #f1c40f;}
@@ -43,6 +44,16 @@ body {
     transform: translateX(24px);
   }
 
+  .checkbox-label:hover  {
+    outline-color: #f1c40f;
+  }
+  .checkbox:focus ~ .checkbox-label, button:focus {
+    /* outline-color: blue; */
+    box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px 0px, rgba(0, 0, 0, 0) 0px 0px 0px 0px, rgb(255, 191, 71) 0px 0px 0px 7px;
+  }
+  button:focus-visible {
+    outline: none;
+  }
   .bg-darken {
     background-color: rgba(0, 0, 0, 0.05);
   }
