--- a/src/css/index.css
+++ b/src/css/index.css
@@ -69,5 +69,5 @@ button:focus-visible {
 }
 
 a {
-  @apply font-medium text-blue-500 hover:underline;
+  @apply font-medium text-blue-500 dark:text-blue-600 hover:underline;
 }
