--- a/src/css/index.css
+++ b/src/css/index.css
@@ -44,7 +44,7 @@ body {
   transition: transform 0.2s linear;
 }
 
-.checkbox:checked+.checkbox-label .ball {
+.checkbox:checked + .checkbox-label .ball {
   transform: translateX(24px);
 }
 
@@ -52,12 +52,13 @@ body {
   outline-color: #f1c40f;
 }
 
-.checkbox:focus~.checkbox-label,
+.checkbox:focus ~ .checkbox-label,
 button:focus {
   /* outline-color: blue; */
-  box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px 0px, rgba(0, 0, 0, 0) 0px 0px 0px 0px, rgb(255, 191, 71) 0px 0px 0px 7px;
-
-
+  box-shadow:
+    rgba(0, 0, 0, 0) 0px 0px 0px 0px,
+    rgba(0, 0, 0, 0) 0px 0px 0px 0px,
+    rgb(255, 191, 71) 0px 0px 0px 7px;
 }
 
 button:focus-visible {
