--- a/src/css/index.css
+++ b/src/css/index.css
@@ -72,3 +72,15 @@ button:focus-visible {
 a {
   @apply font-medium text-blue-500 dark:text-blue-600 hover:underline;
 }
+
+nav > div {
+  transition: 0.15s all;
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+nav.scrolled > div {
+  margin-top: 0 !important;
+  margin-bottom: 0 !important;
+  transform: scale(0.75);
+}
