--- a/src/css/index.css
+++ b/src/css/index.css
@@ -9,6 +9,13 @@ a {
   @apply font-medium text-blue-500 dark:text-blue-600 hover:underline;
 }
 
+p {
+  @apply max-w-[80ch]
+}
+
+hr {
+  @apply my-gutter
+}
 
 /**
  * Layout components
