Typography improvements for GCA content

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -10,12 +10,21 @@ a {
 }
 
 p {
-  @apply max-w-[80ch]
+  @apply max-w-[70ch] mt-4 leading-relaxed;
 }
 
 hr {
-  @apply my-gutter
+  @apply my-gutterAndAHalf border-solid border-t border-gray-300
 }
+
+h1, h2, h3 {
+  text-wrap: balance;
+}
+
+p+h3 {
+  @apply border-t border-gray-300 pt-gutterHalf
+}
+
 
 /**
  * Layout components
